[package]
name = "gpm"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "Utility for managing packages from GitHub releases"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["std", "derive", "usage", "help", "suggestions"], default-features = false }
curl = "0.4.44"
serde = { version = "1.0.152", features = ["serde_derive"], default-features = false }
serde_json = "1.0.91"
ureq = "2.6.2"
yansi = "0.5.1"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = "abort"
strip = true
